# Foto_InjectLoader

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Foto_InjectLoader.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  agent.vcxproj  agent.vcxproj.filters  build.gradle  cmake_install.cmake  hwidSpoofer.vcxproj  hwidSpoofer.vcxproj.filters  injector.vcxproj  injector.vcxproj.filters  settings.gradle  todo
buildSrc/src/mian/java/: CompileNatives.java
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/fun/api/: InjectionProvider.java
src/main/java/com/fun/api/annotations/: Injection.java  Transform.java
src/main/java/com/fun/api/interfaces/: FotoInjection.java
src/main/java/com/fun/inject/: Bootstrap.java  Main.java
src/main/java/com/fun/inject/define/: Definer.java
src/main/java/com/fun/inject/mapper/: Mapper.java  Mappings.java  RemapException.java  SideOnly.java
src/main/java/com/fun/inject/transform/: IClassTransformer.java
src/main/java/com/fun/inject/utils/: FishClassWriter.java  InjectUtils.java  InjectorUtils.java  Native.java  NativeUtils.java  ReflectionUtils.java
src/main/java/com/fun/inject/version/: MinecraftType.java  MinecraftVersion.java
src/main/java/com/fun/network/codec/: MessageDecoder.java  MessageEncoder.java
src/main/java/com/fun/utils/: Pair.java
src/main/native/dll/: HwidSpoofer.c  dllmain.c
src/main/native/injector/: GetProcAddressR.c  GetProcAddressR.h  Inject.c  LoadLibraryR.c  LoadLibraryR.h
src/main/resources/: log4j2.xml
src/main/resources/mappings/1.8.9/: vanilla.srg
(+40 files in other folders)
